[gd_scene load_steps=3 format=3 uid="uid://cnv8yjx3m8hkp"]

[ext_resource type="Script" path="res://scripts/exit_confirmation_dialog.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.047, 0.165, 0.282, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ExitConfirmationDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.031, 0.11, 0.188, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalPanel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(850, 700)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/ModalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ModalPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TitleLabel" type="Label" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866, 0.745, 0.722, 1)
theme_override_font_sizes/font_size = 80
text = "Exit Level?"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MessageLabel" type="Label" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866, 0.745, 0.722, 1)
theme_override_font_sizes/font_size = 56
text = "Exit level? Progress will not be saved."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ExitButton" type="Button" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="StayButton" type="Button" parent="CenterContainer/ModalPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Stay"

[connection signal="gui_input" from="Overlay" to="." method="_on_overlay_gui_input"]
[connection signal="pressed" from="CenterContainer/ModalPanel/MarginContainer/VBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/ModalPanel/MarginContainer/VBoxContainer/ButtonContainer/StayButton" to="." method="_on_stay_button_pressed"]
